--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.10",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
